--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
     color: #F9FAF8;
     font-size: 16px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -46,24 +46,32 @@ body {
 
 .layer-1 {
     /*background-color: #292929;*/
-    background-image: url("images/moon.png");
+    background-color: #1c1c1c;
+    padding-left: 20%;
+    padding-right: 20%;
 }
 
 .layer-1-content {
-    display: flex;
-    justify-content: center;
+    /* display: flex;
+    justify-content: center; 
     padding: 130px;
-    gap: 50px;
+    gap: 50px; */
+    display: flex;
+    padding-top: 10%;
+    padding-bottom: 10%;
 }
 
 .layer-1-content-left {
-    max-width: 500px;
-    align-self: center;
+    /* max-width: 500px; 
+    align-self: center;  */
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
 }
 
 .layer-1-content-right {
     max-width: 600px;
-    align-self: center;
+    
 }
 
 .layer-1 .title {
@@ -113,6 +121,7 @@ body {
 .layer-2 {
     padding: 80px;
     text-align: center;
+    
 }
 
 .layer-2 .title {
